2013-09-19  Eric Carlson  <eric.carlson@apple.com>

        MediaStream API: update MediaStreamTrackEvent object to match spec
        https://bugs.webkit.org/show_bug.cgi?id=121624

        Reviewed by Dean Jackson.

        Test: fast/mediastream/MediaStreamTrackEvent-constructor.html

        * Modules/mediastream/MediaStreamTrack.idl: Remove NoInterfaceObject.

        * Modules/mediastream/MediaStreamTrackEvent.cpp: 
        (WebCore::MediaStreamTrackEventInit::MediaStreamTrackEventInit): New.
        (WebCore::MediaStreamTrackEvent::create): New form that takes an initialize.
        (WebCore::MediaStreamTrackEvent::MediaStreamTrackEvent): Ditto.
        * Modules/mediastream/MediaStreamTrackEvent.h:
        * Modules/mediastream/MediaStreamTrackEvent.idl:

        * bindings/js/JSDictionary.cpp:
        (WebCore::JSDictionary::convertValue): New.
        * bindings/js/JSDictionary.h:

2013-09-19  Anders Carlsson  <andersca@apple.com>

        Remove #if !ENABLE(WORKERS) code in ThreadGlobalData
        https://bugs.webkit.org/show_bug.cgi?id=121649

        Reviewed by Sam Weinig.

        This lets us remove a FIXME. Also, move threadGlobalData out of line; there's no need for it to be inline.

        * WebCore.exp.in:
        * platform/ThreadGlobalData.cpp:
        (WebCore::threadGlobalData):
        * platform/ThreadGlobalData.h:

2013-09-19  Anders Carlsson  <andersca@apple.com>

        Modernize Length setters/getters
        https://bugs.webkit.org/show_bug.cgi?id=121647

        Reviewed by Andreas Kling.

        Add a move constructor and move assignment operator to Length and fixup some of the getters and setters.

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::getBorderRadiusCornerValues):
        (WebCore::getBorderRadiusCornerValue):
        * css/DeprecatedStyleBuilder.cpp:
        (WebCore::ApplyPropertyLength::setValue):
        (WebCore::ApplyPropertyLength::createHandler):