@@ -1,3 +1,15 @@
+2013-09-19  Darin Adler  <darin@apple.com>
+
+        Fix leaks in CSS parser caused by overwriting owned raw pointers with 0
+        https://bugs.webkit.org/show_bug.cgi?id=121655
+
+        Reviewed by Anders Carlsson.
+
+        * css/CSSGrammar.y.in: Use nullptr instead of 0. Use unique_ptr instead
+        of a raw pointer in cases where we might or might not actually keep
+        the allocated memory. This can still be cleaned up further, but this
+        should fix the memory leaks we have been seeing.
+
 2013-09-19  Eric Carlson  <eric.carlson@apple.com>
 
         MediaStream API: update MediaStreamTrackEvent object to match spec
